pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidClassPropertyModifier.pkl
class Foo {
  open foo: Int = 42
}

res1 = new Foo {}
